--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/client/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/client/List.razor
@@ -5,6 +5,7 @@
 @using FS.Extends
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
+@inject Blazored.LocalStorage.ILocalStorageService storage;
 
 <div class="layui-card">
     <div class="layui-card-header" id="anchor-play-header">
@@ -104,7 +105,7 @@
         if (PageIndex < 1) PageIndex = 1;
         _lastIndex = PageIndex;
 
-        _lst = await _iocManager.Resolve<IClientRegister>().ToListAsync() ?? new();
+        _lst = await _iocManager.Resolve<IFssApi>().GetClientListAsync(storage) ?? new();
         _lst = _lst.OrderByDescending(o => o.ActivateAt).ToList();
         _totalCount = _lst.Count;
     }
