--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Update.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/fss/task_group/Update.razor
@@ -8,6 +8,7 @@
 @inject IIocManager _iocManager;
 @inject NavigationManager nav;
 @inject IJSRuntime js;
+@inject Blazored.LocalStorage.ILocalStorageService storage;
 
 <div class="layui-row layui-col-space15">
     <div class="layui-col-md6">
@@ -150,16 +151,16 @@
             else
                 throw new Exception("Cron格式错误");
 
-            await _iocManager.Resolve<ITaskGroupUpdate>().SaveAsync(_info);
+            await _iocManager.Resolve<IFssApi>().SaveTaskGroupAsync(storage,_info);
 
     // 需要修改当前任务的JobName
             if (_info.TaskId > 0)
             {
-                await _iocManager.Resolve<ITaskUpdate>().UpdateJobName(_info.TaskId, _info.JobName);
+                await _iocManager.Resolve<IFssApi>().UpdateTaskJobName(storage,_info.TaskId, _info.JobName);
             }
             else
             {
-                await _iocManager.Resolve<ITaskAdd>().GetOrCreateAsync(_info.Id);
+                await _iocManager.Resolve<IFssApi>().GetOrCreateTaskAsync(storage,_info.Id);
             }
             await js.InvokeVoidAsync("layer.msg", "修改成功", new
             {
@@ -194,7 +195,7 @@
     {
         if (Id > 0 && _info.Id == 0)
         {
-            _info = await _iocManager.Resolve<ITaskGroupInfo>().ToInfoAsync(Id);
+            _info = await _iocManager.Resolve<IFssApi>().GetTaskGroupInfoAsync(storage,Id);
             if (_info == null)
             {
                 await js.InvokeVoidAsync("layer.alert", "任务组不存在", new
@@ -216,7 +217,7 @@
 
     private async Task Delete()
     {
-        await _iocManager.Resolve<ITaskGroupDelete>().DeleteAsync(Id);
+        await _iocManager.Resolve<IFssApi>().DeleteTaskGroupAsync(storage,Id);
         GotoList();
     }
 
