--- a/01_UserInterface（前端界面）/FOPS.Blazor/Shared/HeadMenu.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Shared/HeadMenu.razor
@@ -1,3 +1,7 @@
+@using Microsoft.Extensions.Configuration
+@inject IIocManager _iocManager;
+@inject Blazored.LocalStorage.ILocalStorageService storage;
+
 <div class="layui-header">
     <ul class="layui-nav layui-layout-left">
         <li class="layui-nav-item layadmin-flexible" lay-unselect>
@@ -16,7 +20,13 @@
             </a>
         </li>
         <li class="layui-nav-item layui-hide-xs" lay-unselect>
-            <input type="text" placeholder="搜索..." autocomplete="off" class="layui-input layui-input-search" layadmin-event="serach" lay-action="template/search.html?keywords=">
+            <select @bind="FssServer">
+                <option value="">FSS环境</option>
+                @foreach (var fssServer in _dicFssServer)
+                {
+                    <option value="@fssServer.Value">@fssServer.Key</option>
+                }
+            </select>
         </li>
     </ul>
     <ul class="layui-nav layui-layout-right" lay-filter="layadmin-layout-right">
@@ -66,3 +76,47 @@
         </li>
     </ul>
 </div>
+
+@code{
+    private bool _isFirst;
+    private string _fssServer;
+
+    public string FssServer
+    {
+        get => _fssServer;
+        set
+        {
+            _fssServer = value;
+            storage.SetItemAsStringAsync("FssServer", _fssServer);
+        }
+    }
+
+    private Dictionary<string, string> _dicFssServer = new();
+
+    protected override void OnInitialized()
+    {
+        if (_isFirst) return;
+        _isFirst = true;
+
+        var fssServers = _iocManager.Resolve<IConfigurationRoot>().GetSection("FSS:Server").GetChildren();
+        foreach (var configurationSection in fssServers)
+        {
+            _dicFssServer[configurationSection.GetSection("Name").Value] = configurationSection.GetSection("Url").Value;
+        }
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        if (!firstRender) return;
+
+        var selValue = await storage.GetItemAsStringAsync("FssServer");
+        if (!string.IsNullOrWhiteSpace(selValue))
+        {
+            FssServer = selValue;
+        }
+        else if (_dicFssServer.Count > 0)
+        {
+            FssServer = _dicFssServer.First().Value;
+        }
+    }
+}
