--- a/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/db/List.razor
+++ b/01_UserInterface（前端界面）/FOPS.Blazor/Pages/link_track/db/List.razor
@@ -209,26 +209,19 @@
     {
         searchDbName = searchDbName?.Trim();
         searchTableName = searchTableName?.Trim();
-        var indexSet = LinkTrackEsContext.Data.SlowQuery.Where(o => o.Term(t => t.CallType, EumCallType.Database));
-        if (!string.IsNullOrWhiteSpace(_curAppId))
-        {
-            indexSet.Where(o => o.Term(t => t.AppId, _curAppId));
-        }
-        if (!string.IsNullOrWhiteSpace(searchDbName))
-        {
-            indexSet.Where(o => o.QueryString(t => t.Fields(f => f.Field(f => f.DbName)).Query($"*{searchDbName}*")));
-        }
-        if (!string.IsNullOrWhiteSpace(searchTableName))
-        {
-            indexSet.Where(o => o.Term(t => t.DbTableName, searchTableName));
-        }
-        if (searchUseTs > 0)
-        {
-            indexSet.Where(o => o.LongRange(l => l.Field(f => f.UseTs).GreaterThanOrEquals(searchUseTs)));
-        }
-        if (_curSort == "0") indexSet.Sort(s => s.Descending(d => d.StartTs));
-        else indexSet.Where(o => o.LongRange(l => l.Field(f => f.StartTs).GreaterThanOrEquals(DateTime.Now.AddMinutes(-_curSort.ConvertType(0)).ToTimestamps()))).Sort(s => s.Descending(d => d.UseTs));
+        var indexSet = LinkTrackEsContext.Data.SlowQuery
+                                         .Where(o => o.CallType == EumCallType.Database)
+                                         .Where(o => o.AppId == _curAppId)
+                                         .Where(o => o.DbTableName == searchTableName)
+                                         .Where(o => o.DbName.Contains(searchDbName))
+                                         .Where(o => o.UseTs >= searchUseTs);
 
+
+        if (_curSort == "0") indexSet.Desc(d => d.StartTs);
+        else
+        {
+            indexSet.Where(o => o.StartTs >= DateTime.Now.AddMinutes(-_curSort.ConvertType(0)).ToTimestamps()).Desc(d => d.UseTs);
+        }
         _lst = indexSet.ToList(_pageSize, PageIndex, out _totalCount);
 
     // 替换参数
